# src/main/java/com/project1/ms_transaction_service/TransactionApiDelegateImpl.java
@@ -14,7 +14,6 @@ import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 
 @Component
@@ -33,21 +32,40 @@ public class TransactionApiDelegateImpl implements TransactionsApiDelegate {
     private CreditTransactionService creditTransactionService;
 
     @Override
-    public Mono<ResponseEntity<Flux<AccountTransactionResponse>>> getTransactionsByAccount(String accountNumber, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<Flux<AccountTransactionResponse>>> getAccountTransactionsByAccountNumber(String accountNumber, ServerWebExchange exchange) {
         return Mono.just(ResponseEntity.ok().body(accountTransactionService.getTransactionsByAccountNumber(accountNumber)));
+    }
+
+    @Override
+    public Mono<ResponseEntity<Flux<CreditCardTransactionResponse>>> getCreditCardTransactionsByCreditCardNumber(String creditCardNumber,
+                                                                                                                 ServerWebExchange exchange) {
+        return Mono.just(ResponseEntity.ok().body(creditCardTransactionService.getCreditCardTransactionsByCardNumber(creditCardNumber)));
+    }
+
+    @Override
+    public Mono<ResponseEntity<Flux<CreditPaymentTransactionResponse>>> getCreditTransactionsByCreditId(String creditId, ServerWebExchange exchange) {
+        return Mono.just(ResponseEntity.ok().body(creditTransactionService.getCreditTransactionsByCreditId(creditId)));
     }
 
     @Override
     public Mono<ResponseEntity<AccountTransactionResponse>> createTransactionAccounts(Mono<AccountTransactionRequest> accountTransactionRequest,
                                                                                       ServerWebExchange exchange) {
         return accountTransactionService.createAccountTransaction(accountTransactionRequest)
-            .map(response -> ResponseEntity.status(HttpStatus.CREATED).body(response));
+            .map(ResponseEntity.status(HttpStatus.CREATED)::body);
     }
 
     @Override
-    public Mono<ResponseEntity<CreditCardUsageTransactionResponse>> createCreditCardUsageTransaction(
-        Mono<CreditCardUsageTransactionRequest> creditCardTransactionRequest, ServerWebExchange exchange) {
-        return creditCardTransactionService.createCreditCardUsageTransaction(creditCardTransactionRequest).map(ResponseEntity::ok);
+    public Mono<ResponseEntity<CreditCardTransactionResponse>> createCreditCardUsageTransaction(
+        Mono<CreditCardTransactionRequest> creditCardTransactionRequest, ServerWebExchange exchange) {
+        return creditCardTransactionService.createCreditCardUsageTransaction(creditCardTransactionRequest)
+            .map(ResponseEntity.status(HttpStatus.CREATED)::body);
+    }
+
+    @Override
+    public Mono<ResponseEntity<CreditCardTransactionResponse>> createCreditCardPaymentTransaction(
+        Mono<CreditCardTransactionRequest> creditCardPaymentTransactionRequest, ServerWebExchange exchange) {
+        return creditCardTransactionService.createCreditCardPaymentTransaction(creditCardPaymentTransactionRequest)
+            .map(ResponseEntity.status(HttpStatus.CREATED)::body);
     }
 
     @Override
@@ -63,23 +81,27 @@ public class TransactionApiDelegateImpl implements TransactionsApiDelegate {
     @Override
     public Mono<ResponseEntity<CreditPaymentTransactionResponse>> createCreditPaymentTransaction(
         Mono<CreditPaymentTransactionRequest> creditPaymentTransactionRequest, ServerWebExchange exchange) {
-        return creditTransactionService.createCreditPaymentTransaction(creditPaymentTransactionRequest).map(ResponseEntity.status(HttpStatus.CREATED)::body);
+        return creditTransactionService.createCreditPaymentTransaction(creditPaymentTransactionRequest)
+            .map(ResponseEntity.status(HttpStatus.CREATED)::body);
     }
 
     @Override
     public Mono<ResponseEntity<CustomerProductsResponse>> getAllCustomerProductsByCustomerId(String customerId, ServerWebExchange exchange) {
-        return transactionService.getAllCustomerProductsByCustomerId(customerId).map(ResponseEntity::ok);
+        return transactionService.getAllCustomerProductsByCustomerId(customerId)
+            .map(ResponseEntity::ok);
     }
 
     @Override
     public Mono<ResponseEntity<CustomerProductsAverageBalanceResponse>> getAllCustomerProductsAvgBalanceByCustomerId(String customerId,
                                                                                                                      ServerWebExchange exchange) {
-        return transactionService.getAllCustomerProductsAvgBalanceCustomerId(customerId).map(ResponseEntity::ok);
+        return transactionService.getAllCustomerProductsAvgBalanceCustomerId(customerId)
+            .map(ResponseEntity::ok);
     }
 
     @Override
     public Mono<ResponseEntity<ProductsCommissionResponse>> getAllProductsCommissionRange(LocalDateTime startDate, LocalDateTime endDate,
                                                                                           ServerWebExchange exchange) {
-        return transactionService.getProductsCommissionByRange(startDate, endDate).map(ResponseEntity::ok);
+        return transactionService.getProductsCommissionByRange(startDate, endDate)
+            .map(ResponseEntity::ok);
     }
 }
